:boom: fix: scrollbar issues on chrome and other browsers

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,6 +9,8 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 
 html, body {
